[package]
name = "arg_combinators"
description = "Command line argument combinators"
version = "0.5.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/arg-combinators.git"
repository = "https://github.com/stevebob/arg-combinators.git"
documentation = "https://docs.rs/arg-combinators"

[dependencies]
getopts = "0.2"

[[example]]
name = "dimensions"

[[example]]
name = "hello"

[[example]]
name = "area"
