[package]
name = "simon"
description = "Library for declaratively specifying and parsing command line arguments"
version = "0.3.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/simon.git"
repository = "https://github.com/stevebob/simon.git"
documentation = "https://docs.rs/simon"

[dependencies]
getopts = "0.2"
